Update layout of the form.

--- a/indexx.html
+++ b/indexx.html
@@ -15,10 +15,9 @@
 		</div>
 		<div class="form-content">
 			<div class="form-para">
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, quaerat consequatur, ipsa officiis
-					laboriosam rerum odio minus vitae quidem, officia nesciunt consequuntur vero sunt? Repudiandae
-					dolores nemo sint totam vel? Odio molestiae, modi aspernatur hic earum maxime? Voluptatem veritatis
-					ut officia aperiam maxime, voluptate, incidunt non atque reprehenderit natus deserunt.</p>
+				<p>This is not a real online service! You know you need something like this in your life to help you
+					realize your deepest
+					dreans. Sign up now to get started.</p>
 			</div>
 			<div class="form"></div>
 			<div class="form-submit"></div>
