--- a/indexx.html
+++ b/indexx.html
@@ -17,9 +17,47 @@
 			<div class="form-para">
 				<p>This is not a real online service! You know you need something like this in your life to help you
 					realize your deepest
-					dreans. Sign up now to get started.</p>
+					dreans. Sign up <em>now</em> to get started.</p>
+				<p>You <em>know</em> you want to.</p>
 			</div>
-			<div class="form"></div>
+			<div class="form">
+				<p>Lets do this!</p>
+				<form action="">
+					<div class="form-row">
+						<div class="form-col">
+							<label for="firstname">FIRST NAME</label>
+							<input type="text" name="firstname" id="firstname">
+						</div>
+
+						<div class="form-col">
+							<label for="lastname">LAST NAME</label>
+							<input type="text" name="lastname" id="lastname">
+						</div>
+					</div>
+					<div class="form-row">
+						<div class="form-col">
+							<label for="email">EMAIL</label>
+							<input type="email" name="email" id="email">
+						</div>
+
+						<div class="form-col">
+							<label for="phone">PHONE number</label>
+							<input type="number" name="phone" id="phone">
+						</div>
+					</div>
+					<div class="form-row">
+						<div class="form-col">
+							<label for="pass">PASSWORD</label>
+							<input type="password" name="pass" id="pass">
+						</div>
+
+						<div class="form-col">
+							<label for="cnfpass">CONFIRM PASSWORD</label>
+							<input type="password" name="cnfpass" id="cnfpass">
+						</div>
+					</div>
+				</form>
+			</div>
 			<div class="form-submit"></div>
 		</div>
 	</div>
