Complete layout and basic UI.

--- a/indexx.html
+++ b/indexx.html
@@ -41,7 +41,7 @@
 						</div>
 
 						<div class="form-col">
-							<label for="phone">PHONE number</label>
+							<label for="phone">PHONE NUMBER</label>
 							<input type="number" name="phone" id="phone">
 						</div>
 					</div>
@@ -54,6 +54,12 @@
 						<div class="form-col">
 							<label for="cnfpass">CONFIRM PASSWORD</label>
 							<input type="password" name="cnfpass" id="cnfpass">
+						</div>
+					</div>
+					<div class="form-row">
+						<div class="form-col">
+							<button type="submit">Create Account</button>
+							<p>Already have an account? <a href="">Login</a></p>
 						</div>
 					</div>
 				</form>
