--- a/indexx.html
+++ b/indexx.html
@@ -25,19 +25,19 @@
 				<form action="">
 					<div class="form-row">
 						<div class="form-col">
-							<label for="firstname">FIRST NAME</label>
-							<input type="text" name="firstname" id="firstname">
+							<label for="firstname">*FIRST NAME</label>
+							<input type="text" name="firstname" id="firstname" required>
 						</div>
 
 						<div class="form-col">
-							<label for="lastname">LAST NAME</label>
-							<input type="text" name="lastname" id="lastname">
+							<label for="lastname">*LAST NAME</label>
+							<input type="text" name="lastname" id="lastname" required>
 						</div>
 					</div>
 					<div class="form-row">
 						<div class="form-col">
-							<label for="email">EMAIL</label>
-							<input type="email" name="email" id="email">
+							<label for="email">*EMAIL</label>
+							<input type="email" name="email" id="email" required>
 						</div>
 
 						<div class="form-col">
@@ -47,13 +47,13 @@
 					</div>
 					<div class="form-row">
 						<div class="form-col">
-							<label for="pass">PASSWORD</label>
-							<input type="password" name="pass" id="pass">
+							<label for="pass">*PASSWORD</label>
+							<input type="password" name="pass" id="pass" required>
 						</div>
 
 						<div class="form-col">
-							<label for="cnfpass">CONFIRM PASSWORD</label>
-							<input type="password" name="cnfpass" id="cnfpass">
+							<label for="cnfpass">*CONFIRM PASSWORD</label>
+							<input type="password" name="cnfpass" id="cnfpass" required>
 						</div>
 					</div>
 					<div class="form-row">
