--- a/indexx.html
+++ b/indexx.html
@@ -42,7 +42,7 @@
 
 						<div class="form-col">
 							<label for="phone">PHONE NUMBER</label>
-							<input type="number" name="phone" id="phone" min="10" max="10">
+							<input type="number" name="phone" id="phone" min="1000000000" max="9999999999">
 						</div>
 					</div>
 					<div class="form-row">
