--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 	<div class="container">
 		<div class="form-img">
 			<img src="halie-west-25xggax4bSA-unsplash.jpg" alt="tree">
+			<div class="odin-logo">
+				<img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png"
+					alt="">
+				<h1>ODIN</h1>
+			</div>
 		</div>
 		<div class="form-content">
 			<div class="form-para">
