Add password constraint.
I have not added the code to compare whether both
the passwords are same, nor I have added the code
that shows the expected format of the user input
below it.

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 					<div class="form-row">
 						<div class="form-col">
 							<label for="pass">*PASSWORD</label>
-							<input type="password" name="pass" id="pass" required>
+							<input type="password" name="pass" id="pass" required minlength="8">
 						</div>
 
 						<div class="form-col">
 							<label for="cnfpass">*CONFIRM PASSWORD</label>
-							<input type="password" name="cnfpass" id="cnfpass" required>
+							<input type="password" name="cnfpass" id="cnfpass" required minlength="8">
 						</div>
 					</div>
 					<div class="form-row">
